OAK-11834 - Cleanups to reduce changeset in OAK-11814  (#2411)