@@ -22,7 +22,6 @@ import org.apache.jackrabbit.oak.spi.query.QueryIndexProvider;
 import org.apache.jackrabbit.oak.spi.state.NodeState;
 import org.jetbrains.annotations.NotNull;
 
-import java.util.Collections;
 import java.util.List;
 
 public class ElasticIndexProvider implements QueryIndexProvider {
@@ -35,6 +34,6 @@ public class ElasticIndexProvider implements QueryIndexProvider {
 
     @Override
     public @NotNull List<? extends QueryIndex> getQueryIndexes(NodeState nodeState) {
-        return Collections.singletonList(new ElasticIndex(indexTracker));
+        return List.of(new ElasticIndex(indexTracker));
     }
 }
